--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "autoprefixer": "^8.0.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "js-md5": "^0.7.3",
+    "vant": "^2.12.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -17,6 +21,12 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
+    "i": "^0.3.6",
+    "npm": "^7.5.3",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.11"
